tests/xml/validxml/raDec/goodradec4.xml.README
goodradec4.xml: OK ra, dec is 359.999999999999999, -90.0, rmsCorr is -1.00
