tests/xml/invalidxml/raDec/badra3.xml.README
badra3.xml: BAD rmsCorr is too large -- [-1.0 .. 1.0]
